--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@use-gesture/react": "^10.3.1",
     "autoprefixer": "^10.4.22",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -16,6 +17,7 @@
     "gsap": "^3.13.0",
     "lucide-react": "^0.553.0",
     "next": "16.0.2",
+    "ogl": "^1.0.11",
     "postcss": "^8.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
